--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,35 @@
-/blue-env
-*.sqlite
-*.pyc
-*.pyo
-*~
-*.swp
-*.
-/flask_app/web_package/config/config_secrets.py
+*.py[cod]
+
+# C extensions
+*.so
+
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
