--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==0.9
+Flask-Restless==0.9.1
 Flask-SQLAlchemy==0.16
 Jinja2==2.6
 MySQL-python==1.2.4b5
@@ -7,4 +8,5 @@ Werkzeug==0.8.3
 argparse==1.2.1
 distribute==0.6.30
 gunicorn==0.17.0
+python-dateutil==1.5
 wsgiref==0.1.2
